--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+		<link rel="icon" href="assets/favicon-light.png" media="(prefers-color-scheme:light)">
+		<link rel="icon" href="assets/favicon-dark.png" media="(prefers-color-scheme:no-preference)">
+		<link rel="icon" href="assets/favicon-dark.png"  media="(prefers-color-scheme:dark)">
 		<% preact.headEnd %>
 	</head>
 	<body>
