--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title><% preact.title %></title>
+		<title>Chatterscribe</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="icon" href="assets/favicon-light.png" media="(prefers-color-scheme:light)">
 		<link rel="icon" href="assets/favicon-dark.png" media="(prefers-color-scheme:no-preference)">
 		<link rel="icon" href="assets/favicon-dark.png"  media="(prefers-color-scheme:dark)">
-		<% preact.headEnd %>
 	</head>
 	<body>
-		<% preact.bodyEnd %>
 	</body>
 </html>
